<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <EditText
        android:id="@+id/edit_text1"
        android:layout_width="340dp"
        android:layout_height="69dp"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="21dp"
        android:layout_marginEnd="31dp"
        android:layout_marginRight="31dp"
        android:hint="@string/enter_grocery"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/edit_text2"
        android:layout_width="340dp"
        android:layout_height="69dp"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginEnd="31dp"
        android:layout_marginRight="31dp"
        android:hint="@string/enter_price"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@id/edit_text1"
        app:layout_constraintTop_toBottomOf="@+id/edit_text1"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/edit_text3"
        android:layout_width="340dp"
        android:layout_height="69dp"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="31dp"
        android:layout_marginRight="31dp"
        android:hint="@string/enter_grocery"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@id/edit_text1"
        app:layout_constraintTop_toBottomOf="@+id/edit_text2"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/edit_text4"
        android:layout_width="340dp"
        android:layout_height="69dp"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="31dp"
        android:layout_marginRight="31dp"
        android:hint="@string/enter_price"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@id/edit_text1"
        app:layout_constraintTop_toBottomOf="@+id/edit_text3"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/edit_text5"
        android:layout_width="340dp"
        android:layout_height="69dp"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginEnd="31dp"
        android:layout_marginRight="31dp"
        android:hint="@string/enter_grocery"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@id/edit_text1"
        app:layout_constraintTop_toBottomOf="@+id/edit_text4"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/edit_text6"
        android:layout_width="340dp"
        android:layout_height="69dp"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginEnd="31dp"
        android:layout_marginRight="31dp"
        android:hint="@string/enter_price"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@id/edit_text1"
        app:layout_constraintTop_toBottomOf="@+id/edit_text5"
        android:importantForAutofill="no" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="328dp"
        android:layout_height="52dp"
        android:layout_marginBottom="620dp"
        android:gravity="center|center_horizontal"
        android:text="@string/my_grocery_list"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.481"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/button"
        android:layout_width="134dp"
        android:layout_height="62dp"
        android:layout_marginStart="147dp"
        android:layout_marginLeft="147dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="130dp"
        android:layout_marginRight="130dp"
        android:layout_marginBottom="19dp"
        android:text="@string/add_prices"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_text6"
        app:layout_constraintVertical_bias="0.534" />


</androidx.constraintlayout.widget.ConstraintLayout>