<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    android:padding="15dp"
    tools:context=".Activity2">

    <TextView
        android:id="@+id/textView10"
        android:layout_width="342dp"
        android:layout_height="188dp"
        android:layout_margin="10dp"
        android:layout_marginStart="62dp"
        android:layout_marginLeft="62dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="114dp"
        android:layout_marginRight="114dp"
        android:background="#fff"
        android:fontFamily="@font/roboto_mono_light_italic"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/hi_my_name_is_ajao_abdur_raqeeb_i_m_22_years_old_i_live_in_abuja_i_an_intern_at_startng_2020_internship_below_is_contained_my_grocery_list_with_the_totalprice"
        android:textColor="#000"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.336"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="200dp"
        android:layout_height="66dp"
        android:layout_margin="10dp"
        android:layout_marginStart="49dp"
        android:layout_marginLeft="49dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="33dp"
        android:layout_marginRight="33dp"
        android:gravity="center"
        android:textColor="#000"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/textView3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="113dp"
        android:layout_height="66dp"
        android:layout_margin="10dp"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="48dp"
        android:layout_marginRight="48dp"
        android:gravity="center"
        android:textColor="#000"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="200dp"
        android:layout_height="66dp"
        android:layout_margin="10dp"
        android:layout_marginStart="46dp"
        android:layout_marginLeft="46dp"
        android:layout_marginTop="59dp"
        android:layout_marginEnd="33dp"
        android:layout_marginRight="33dp"
        android:gravity="center"
        android:textColor="#000"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/textView5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="113dp"
        android:layout_height="66dp"
        android:layout_margin="10dp"
        android:layout_marginStart="18dp"
        android:layout_marginLeft="18dp"
        android:layout_marginTop="236dp"
        android:layout_marginEnd="51dp"
        android:layout_marginRight="51dp"
        android:gravity="center"
        android:textColor="#000"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="200dp"
        android:layout_height="66dp"
        android:layout_margin="10dp"
        android:layout_marginStart="49dp"
        android:layout_marginLeft="49dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="39dp"
        android:layout_marginRight="39dp"
        android:gravity="center"
        android:textColor="#000"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/textView7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="113dp"
        android:layout_height="66dp"
        android:layout_margin="10dp"
        android:layout_marginStart="34dp"
        android:layout_marginLeft="34dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="39dp"
        android:layout_marginRight="39dp"
        android:gravity="center"
        android:textColor="#000"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="113dp"
        android:layout_height="66dp"
        android:layout_margin="10dp"
        android:layout_marginStart="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="72dp"
        android:layout_marginRight="72dp"
        android:gravity="center"
        android:textColor="#000"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView9"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="200dp"
        android:layout_height="66dp"
        android:layout_margin="10dp"
        android:layout_marginStart="46dp"
        android:layout_marginLeft="46dp"
        android:layout_marginEnd="39dp"
        android:layout_marginRight="39dp"
        android:gravity="center"
        android:text="@string/total"
        android:textColor="#000"
        android:textSize="30sp"
        app:layout_constraintEnd_toStartOf="@+id/textView8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="147dp"
        android:layout_marginLeft="147dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="162dp"
        android:layout_marginRight="162dp"
        android:layout_marginBottom="101dp"
        android:text="@string/share"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

</androidx.constraintlayout.widget.ConstraintLayout>